--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-translate-loader-static-files": "^2.11.0",
     "sc-date-time": "^1.1.6",
     "components-font-awesome": "^4.6.3",
-    "angular-i18n": "^1.7.7"
+    "angular-i18n": "^1.7.7",
+    "moment": "^2.24.0"
   }
 }
