--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "start": "node /bin/www"
+    "start": "node ./bin/www"
   },
   "license": "GPL",
   "main": "/bin/www",
@@ -28,6 +28,7 @@
     "passport-local": "~1.0.0",
     "pug": "^2.0.0-beta3",
     "respawn": "~2.2.0",
+    "rrule": "^2.6.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "~1.3.7",
     "sqlite3": "~4.0.6",
