--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "~4.13.1",
     "express-session": "~1.12.1",
     "morgan": "~1.6.1",
+    "nodemailer": "^5.1.1",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
     "pug": "^2.0.0-beta3",
