--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/tmunzer/SchoolControl.git"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.2",
     "connect-flash": "~0.1.1",
